--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 </head>
 <body>
 <header>
-    <div class="custom-navbar">
-        <img src="./img.png" alt="SecureW2 Logo" class="navbar-logo">
-        <span class="navbar-title">SecureW2 API Docs</span>
+  <div class="custom-navbar">
+    <img src="./img.png" alt="SecureW2 Logo" class="navbar-logo">
+    <span class="navbar-title">SecureW2 API Docs</span>
+
+    <div class="navbar-dropdown">
+      <label for="api-docs-select">Document for:</label>
+      <select id="api-docs-select" onchange="handleApiChange(this.value)">
+        <option value="enrollment">Enrollment API</option>
+        <option value="certificate">Certificate API</option>
+        <option value="device">Device API</option>
+        <option value="user">User API</option>
+      </select>
     </div>
+  </div>
 </header>
+
+
 
 <div id="swagger-ui"></div>
 
